release: prepare 0.5.0